# episurveil

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.streamlit/: config.toml
app/: Home.py  requirements.txt
config/: data_sources.yaml  default.yaml  germany_calibration.yaml
data/examples/: ebola_outbreak_drc_2018_19.csv  influenza_multiwav_europe_2018_20.csv  (+3 more)
docs/: calibration_findings.md  calibration_protocol.md  data_provenance.md  external_panel_provenance.md  heldout_calibration.md  likelihood_calibration.md  limitations.md  observation_mapping.md  real_filter_protocol.md  rki_hospitalization_audit.md  source_inventory.md  sveiahr_reuse_notes.md
paper/: generate_figures.py  main.aux  main.out  main.tex
scripts/: calibrate_germany_sveaihcrd.py  calibrate_observation_scales.py  calibrate_process_noise.py  download_data.py  download_real_datasets.py  evaluate_multichannel_filter.py  evaluate_real_filter.py  extend_panel.py  fit_joint_data_likelihood.py  fit_observation_likelihood.py  generate_example_datasets.py  generate_synthetic_data.py  harmonize_rki.py  harmonize_rki_hospitalizations.py  heldout_scale_calibration.py  integrate_external_panel.py  preprocess_data.py  run_control_experiment.py  run_forecast.py  run_multichannel_filter.py  run_offline_calibration.py  run_real_data_filter.py  run_sveaihcrd_validation.py  validate_data.py
tests/: test_inference.py  test_models.py  test_multichannel_filter.py  test_multipatch.py  test_multisignal.py  test_observations.py  test_particle_filter.py  test_stochastic.py
(+64 files in other folders)
