[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
[project]
name = "episurveil-control-platform"
version = "0.1.0"
description = "Partially observed stochastic epidemic surveillance and control"
requires-python = ">=3.10"
dependencies = ["numpy>=1.24", "scipy>=1.10", "pandas>=2.0", "pyyaml>=6", "pytest>=7"]
[tool.pytest.ini_options]
pythonpath = ["src"]
